ENH: simple export working without any frills

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifiers =
 python_requires = >= 3.7
 install_requires =
     datalad >= 0.18.0
+    dtoolcore >= 3.18.0
 packages = find_namespace:
 include_package_data = True
 
