WIP: start to implement dtool secial remote

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,8 @@ datalad.extensions =
     # the entrypoint can point to any symbol of any name, as long it is
     # valid datalad interface specification (see demo in this extensions)
     dtool = datalad_dtool:command_suite
+console_scripts =
+    git-annex-remote-dtool = datalad_dtool.dtool_remote:main
 
 [versioneer]
 # See the docstring in versioneer.py for instructions. Note that you must
