--- a/.github/workflows/test_import_export.yml
+++ b/.github/workflows/test_import_export.yml
@@ -20,6 +20,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        sudo apt-get install -y git-annex
         python -m pip install --upgrade pip
         pip install -r requirements-devel.txt
         pip install .
